# workshop-testing-with-fake-data

./: .env.dist  .pre-commit-config.yaml  README.md  compose.yml  pyproject.toml
db-init-scripts/: init.sql
src/app/: constants.py  create_app.py  main.py
src/app/api/: __init__.py  deps.py
src/app/api/crud/: cbs.py
src/app/api/routes/: cbs_aantal_woningen.py  heartbeat.py
src/etl/: __init__.py  main.py
src/etl/apis/: cbs.py  rest_client.py
src/etl/flows/: base.py  cbs.py  cbs_aantal_woningen.py  utils.py
src/etl/settings/: database.py
src/etl/temp_data/: gemeenten-alfabetisch-2025.csv
src/models/faker_models/db/: fake_models.py
src/models/v1/: buurt_gemeente.py  cbs_aantal_woningen.py
src/shared/: constants.py  engine.py  log.py  settings.py
tests/: conftest.py
tests/app/: conftest.py
tests/app/api/crud/: test_cbs.py
tests/app/api/routes/: test_cbs.py  test_heartbeat.py
tests/etl/: conftest.py  utils.py
tests/etl/apis/: test_cbs.py
tests/etl/flows/: test_cbs.py  test_cbs_aantal_woningen.py
